<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_player"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:key="player_name"
            android:title="@string/pref_player_name_title"
            android:summary="@string/pref_player_name_summary"
            android:dialogTitle="@string/pref_player_name_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_audio"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            android:key="sync_offset_ms_seekbar"
            android:title="@string/pref_sync_offset_title"
            android:summary="@string/pref_sync_offset_summary"
            android:defaultValue="5000"
            android:max="10000"
            app:min="0"
            app:showSeekBarValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_debug"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="debug_logging_enabled"
            android:title="@string/pref_debug_logging_title"
            android:summary="@string/pref_debug_logging_summary_off"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="export_debug_logs"
            android:title="@string/pref_export_logs_title"
            android:summary="@string/pref_export_logs_summary_empty"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
