<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Connection status header - disabled, non-clickable (only shown when connected) -->
    <item
        android:id="@+id/action_connection_info"
        android:title="@string/not_connected"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stats"
        android:title="@string/action_stats"
        android:icon="@drawable/ic_info"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        android:icon="@drawable/ic_server_disconnected"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
</menu>
